[package]
name = "cognito_env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
token_cognito = { git = "https://github.com/kano1101/token_cognito.git" }
secret_env = { git = "https://github.com/kano1101/secret_env.git" }
itertools = "0.10.5"
